RESOLVED FIXED165305
[CSS Parser] Fix animation property parsing
https://bugs.webkit.org/show_bug.cgi?id=165305
Summary [CSS Parser] Fix animation property parsing
Dave Hyatt
Reported 2016-12-02 08:06:57 PST
[CSS Parser] Fix animation property parsing
Attachments
Patch (2.70 KB, patch)
2016-12-02 08:08 PST, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-12-02 08:08:44 PST
Dave Hyatt
Comment 2 2016-12-02 08:29:35 PST
Fixed in r209236.
Dave Hyatt
Comment 3 2016-12-02 08:30:36 PST
Fixed in r209236.
Note You need to log in before you can comment on or make changes to this bug.