[CSS Parser] Fix animation property parsing https://bugs.webkit.org/show_bug.cgi?id=165305

Reviewed by Zalan Bujtas.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeAnimationPropertyList):
Match the old parser by only creating a list for animation properties if there
are two or more comma-separated values. Otherwise just return the CSSValue for
the singleton without creating a list.



Canonical link: https://commits.webkit.org/182916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209236 268f45cc-cd09-0410-ab3c-d52691b4dbfc